# notebooks

./: .gitignore  LICENSE  README.md  linux-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  win-requirements.txt
02-dicoding-belajar-data-analysis-dengan-python/: requirements.txt
03-gda-cert/: README.md
04-math-for-ml-cert/: README.md
07-dicoding-machine-learning-terapan/: README.md
08-tf-two-cert/: README.md
09-tf-three-cert/: README.md
__archive__/: README  saliency.py
__docs__/: README
analytics_research/: README.md
apache/: README
assets/: README.md
automations/: README.md
backend/: README.md
binding/: README
bindings/: README.md
computer_vision/: C3W4_Assignment.ipynb  README.md
core/: README.md
dashboard/: README.md
dataset_management/: README.md
deployment_serving/: README.md
deployments/: C2W4_Assignment.ipynb  C3W4_Assignment.ipynb  C3_W1_Lab_1_transfer_learning_cats_dogs.ipynb  C3_W1_Lab_2_Transfer_Learning_CIFAR_10.ipynb  C3_W2_Lab_1_Simple_Object_Detection.ipynb  C3_W2_Lab_2_Object_Detection.ipynb  C3_W2_Lab_3_interactive_eager_few_shot_od_training_colab.ipynb  C3_W3_Lab_1_VGG16-FCN8-CamVid.ipynb  C3_W3_Lab_2_OxfordPets-UNet.ipynb  C3_W4_Lab_1_FashionMNIST-CAM.ipynb  C3_W4_Lab_2_CatsDogs-CAM.ipynb  C3_W4_Lab_3_Saliency.ipynb  README.md
device_embedding/: README.md
devices/: README.md  TF_Serving_Week_2_Exercise_Question.ipynb  TF_Serving_Week_3_Exercise_Question.ipynb  [WEEK 2] C2_W2_Assignment.ipynb  [WEEK 3] C2_W3_Assignment.ipynb
docs/: 02_PCA_Demonstrations_of_PCA.ipynb  (+2 more)
(+252 files in other folders)
