[project]
name = "mlopsency"
description = "you interest to mlops? here's your encyclopedic repo 👊"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "pandohansamuel19@gmail.com", email = "gultomterampil19@gmail.com" },
]
keywords = ["pytorch", "tensorflow"]
dependencies = [
  # Hugging Face integrations
  "datasets",

  # Tokenization
  "blobfile",
  "sentencepiece",
  "tiktoken",

  # Miscellaneous
  "tomli>=1.1.0"
]
dynamic = ["version"]


[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''